# HomeTasks

./: .gitignore
sermiagina_e_p/: CMakeLists.txt
sermiagina_e_p/Complex/: CMakeLists.txt  complex.cpp  complex.h  complex_test.cpp  main.cpp
sermiagina_e_p/complex /: complex.cpp
sermiagina_e_p/ex/: CMakeLists.txt
sermiagina_e_p/ex/src/: main.cpp
sermiagina_e_p/kvaternion/: CMakeLists.txt  kvaternion.cpp  kvaternion.h  kvaternion_test.cpp
sermiagina_e_p/matrix/: CMakeLists.txt  matrixR.cpp  matrixR.h  matrixU.cpp  matrixU.h  matrix_test.cpp
sermiagina_e_p/priorityQueueL/: CMakeLists.txt  priorityQueueL.cpp  priorityQueueL.h  priorityQueueL_test.cpp
sermiagina_e_p/priorityqueuel /: CMakeLists.txt  priorityqueuel.cpp  priorityqueuel.h  priorityqueuel_test.cpp
sermiagina_e_p/rational/: CMakeLists.txt  main.cpp  rational.cpp  rational.h  rational_test.cpp
sermiagina_e_p/stack/: CMakeLists.txt  stack.cpp  stack.h  stack_test.cpp
sermiagina_e_p/stackA/: CMakeLists.txt  stackA.cpp  stackA.h  stackA_test.cpp
sermiagina_e_p/stacka /: CMakeLists.txt  stacka.cpp  stacka.h
sermiagina_e_p/vec3d/: CMakeLists.txt  vec3d.cpp  vec3d.h  vec3d_test.cpp
sermiagina_e_p/vec3dT/: CMakeLists.txt  vec3dT.h  vec3dT_test.cpp
sermiagina_e_p/vec3dt /: CMakeLists.txt
